--- a/localization/jpn/AigisMod-Character-Strings.json
+++ b/localization/jpn/AigisMod-Character-Strings.json
@@ -27,7 +27,7 @@
       "復讐者"
     ],
     "TEXT": [
-      "ヴィンセントは家族を救えなかったことへの贖罪の旅をしている。 NL 彼は今、尖塔を探索しているが、その姿は一人ではなかった。",
+      "ヴィンセントは家族を救えなかったことへの贖罪の旅をしている。 NL だが尖塔を探索している彼の姿は一人ではなかった。",
       "あなたは心臓に対して最後の切り札を構え…",
       "灯りが落ちた通りを行くと、数人の頭巾をした人物が何やら儀式の NL ようなものを行っているところに出くわした。あなたが近づくと、 NL 薄気味悪く一斉にこちらを向く。一番背の高い人物には牙があった NL 彼らは長く青白い手をあなたに伸ばしてくる。 NL 「 ~\"狩人よ我らと共に、そして塔の温もりを肌で感じるのだ\"~ 」"
     ]
