--- a/localization/jpn/AigisMod-Event-Strings.json
+++ b/localization/jpn/AigisMod-Event-Strings.json
@@ -11,7 +11,7 @@
       "[力を借りる] #gアンコモン英傑カードを1枚選んで獲得する。",
       "[戦う] #r英傑と戦う。 #gアンコモン英傑カードをレアにアップグレードする",
       "[立ち去る]",
-      "アップグレードする英傑カードを1枚選ぶ。",
+      "デッキに加える英傑カードを1枚選ぶ。",
       "[力を借りる] #gレア英傑カードにアップグレードする。",
       "[LOCKED] アンコモン英傑カードを持っていません。",
       "[ひとまず召喚] 戦う前に #y英傑結晶 レリックを使用する。",
