--- a/localization/jpn/AigisMod-Relic-Strings.json
+++ b/localization/jpn/AigisMod-Relic-Strings.json
@@ -114,7 +114,7 @@
     "NAME": "英傑結晶",
     "FLAVOR": "「 (尖)塔の階層を制したご褒美に、「英傑結晶」をあげちゃいます」-ソラス",
     "DESCRIPTIONS": [
-      "戦闘勝利時に、 #b1 ポイント獲得する。 ",
+      "戦闘勝利時に #b1 ポイント獲得する。 ",
       "マップ画面（戦闘/イベント/キャンプ以外）で、 #b200 #yゴールド と #b5 ポイントを持っている場合、このレリックを #y右クリック する と 好きな #yアンコモン #y英傑 カード1枚と交換できる。 すでに所持している同名カード(レア含む)は代わりにアップグレードする。",
       "使うことができない…",
       "200ゴールドと5ポイントを消費してデッキに加えるカードを選択。"
@@ -473,7 +473,7 @@
     "NAME": "奇跡の男",
     "FLAVOR": "「――あきらめてはなりません、人の子よ。今より、この女神アイギスが力を貸しましょう！」-女神アイギス",
     "DESCRIPTIONS": [
-      "戦闘中に生成したカードをプレイした時、 #y仮初のHP  #b3 を得る。",
+      "#y体力アップ と置き換える。 戦闘中に生成したカードをプレイした時、 #y仮初のHP  #b3 を得る。",
       " #b1 ターンに #b5 回まで発動する。"
     ]
   },
