--- a/localization/jpn/AigisMod-Power-Strings.json
+++ b/localization/jpn/AigisMod-Power-Strings.json
@@ -545,8 +545,8 @@
                 "DESCRIPTIONS": ["ターン開始時に、手札からカードを #b", " 枚選ぶ、 このターン中、コストを #b1 減少。"]
         },
         "aigisMod:WeavingofFuwa": {
-                "NAME": "Weaving of Fuhua",
-                "DESCRIPTIONS": ["When you receive a debuff, gain #b", " #yStrength. At the start of turn, add #b1 #yDaode #yTianzun."]
+                "NAME": "綺織の伏華",
+                "DESCRIPTIONS": ["デバフを受けた時に 筋力 #b", " を得る。 ターン開始時に #y巽の風 を #b1 枚 手札に加える。"]
         },
 
 
